2014-11-10  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strcpy.S: New file.
	* libc/machine/aarch64/strcpy-stub.S: New file.
	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Add new files.
	* libc/machine/aarch64/Makefile.in: Regenerate.

2014-11-06  Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.in: Add autoconf test to determine size of uintptr_t.
	* newlib.hin: Add new autoconf feature variables.
	* libc/include/inttypes.h: Use new feature variables.
	* configure: Regenerate.

2014-11-06  Terry Guo  <terry.guo@arm.com>

	* libc/stdio/nano-vfprintf_i.c (_printf_i): Use Newlib approach to
	handle string that might be not nul-terminated.
	* testsuite/newlib.stdio/nulprintf.c: New test.

2014-10-29  Jon Turney  <jon.turney@dronecode.org.uk>

	* libc/include/string.h: Correct guard for strcasecmp().

2014-10-29  Terry Guo  <terry.guo@arm.com>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Remove unnecessary comparison.

2014-10-27  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/sys/unistd.h (sethostname): Declare if
	requested.

2014-10-20  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/time/gmtime_r.c (gmtime_r): Remove dead code.

2014-10-16  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/unix/getcwd.c (getcwd): Close directory also in case of an error.

2014-10-10  Thomas Uhle <thomas.uhle@eas.iis.fraunhofer.de>

	* libc/include/_ansi.h: _LONG_LONG_TYPE definition removed.
	* libc/include/math.h: _LONG_LONG_TYPE replaced by "long long".
	Guards for C99 and C++11 functions fixed.
	* libc/include/stdlib.h: Guards for C99 and C++11 functions fixed.

2014-10-09  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* libc/include/stdint.h: Include <sys/_intsup.h>.
	(__STDINT_EXP): Delete.
	(__have_long32): Likewise.
	(__have_long64): Likewise.
	(__have_longlong64): Likewise.
	* libc/include/sys/_intsup.h: New file.
	(__STDINT_EXP): Move from libc/include/stdint.h.
	(__have_long32): Likewise.